<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/Name_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custm_name"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/textView-toppings"
            style="@style/HeaderTextStyle"
            android:fontFamily="sans-serif"
            android:text="@string/toppigs"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"
            />

        <CheckBox
            android:id="@+id/checkbox-wipedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:paddingLeft="24dp"
            android:text="@string/WippedCream"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox-Chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:paddingLeft="24dp"
            android:text="@string/Chocolate"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp">

            <Button
                android:id="@+id/decrease-button"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="dencrement"
                android:text="-"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/quantity-text-view"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="0"
                android:onClick="increment"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/increase-button"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:onClick="increment"
                android:text="+"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/OrderSummary"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/order_summary_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="0$"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/order-button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="makeOrder"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>
